<resources>
    <string name="app_name">图片分享</string>
    <string name="logIn">SIGN IN</string>
    <string name="register">SIGN UP</string>
    <string name="username">账号</string>
    <string name="register_name">用户名</string>
    <string name="register_password">密码</string>
    <string name="password_repeat">请再次输入密码</string>
    <string name="password">密码</string>
    <string name="signIn">登录</string>
    <string name="forgetPassword">忘记密码？</string>
    <string name="signUp">注册</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>